# fuas

./: README.md  doformat.sh  pyproject.toml  tox.ini
.github/workflows/: actv.yml  main.yml  test.yml
cron/: actv-only.Dockerfile  actv-only.sh  actv-push.Dockerfile  actv-push.sh  name-only.Dockerfile  name-only.sh  name-push.Dockerfile  name-push.sh
data/: acqtfile  actvfile  namefile
fuas/: __init__.py  conf.py  main.py  meta.py
